# ovos-dinkum-listener

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_tests.yml  license_tests.yml  notify_matrix.yml  propose_release.yml  publish_alpha.yml  publish_build.yml  publish_docker.yml  publish_major.yml  publish_minor.yml  publish_stable.yml  release_workflow.yml  unit_tests.yml
mycroft_dinkum_listener/: __main__.py  dinkum_service.py  plugins.py  version.py
mycroft_dinkum_listener.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mycroft_dinkum_listener/plugins/: __init__.py  stt_coqui.py  stt_vosk.py  ww_tflite.py
mycroft_dinkum_listener/voice_loop/: __init__.py  microphone.py  voice_activity.py  voice_loop.py
ovos_dinkum_listener/: __main__.py  _util.py  plugins.py  service.py  transformers.py  version.py
ovos_dinkum_listener/voice_loop/: __init__.py  hotwords.py  microphone.py  pyaudio_microphone.py  voice_loop.py
requirements/: extras.txt  linux.txt  onnx.txt  requirements.txt  tests.txt
scripts/: bump_alpha.py  bump_build.py  bump_major.py  bump_minor.py  remove_alpha.py
test/unittests/: test_hotwords.py  test_plugins.py  test_service.py  test_transformers.py  test_voice_loop.py
